# pii-guardrail-browser-extension

./: .gitignore  AGENTS.md  README.md  jest.config.js  manifest.json  webpack.config.js
.claude/: settings.json
_locales/en/: messages.json
_locales/fr/: messages.json
crate/: Cargo.toml
crate/src/: context.rs  gdpr_regex.rs  lib.rs  ner_fallback_regex.rs  pipeline.rs  types.rs
docs/superpowers/plans/: 2026-06-15-gdpr-granular-detection.md  2026-06-16-claude-code-setup.md
docs/superpowers/specs/: 2026-06-15-gdpr-granular-detection-design.md  2026-06-16-claude-code-setup-design.md
scripts/: extension-packaging.js
scripts/claude-hooks/: pre-commit-privacy-check.cjs  rust-edit-reminder.cjs  src-edit-privacy-scan.cjs
src/background/: service-worker.ts
src/benchmark/: detection-harness.ts
src/offscreen/: detection.ts  ner-provider.ts
src/options/: App.svelte  options.ts
src/options/components/: AllowlistCard.svelte  BlocklistCard.svelte  CancelDetectionCard.svelte  CodeBlocksCard.svelte  DebugSystemCheckCard.svelte  PublicSupportCard.svelte  SensitivityCard.svelte  SystemCompatibilityCard.svelte  (+1 more)
src/popup/: App.svelte  popup-model.svelte.ts  popup.ts
src/shared/: category-groups.ts  constants.ts  i18n.ts  message-types.ts  project-links.ts  sensitivity-resolver.ts  storage.ts
tests/: setup.ts
tests/offscreen/: ner-provider.test.ts
tests/scripts/: pre-commit-privacy-check.test.js  rust-edit-reminder.test.js  src-edit-privacy-scan.test.js
tests/shared/: category-groups.test.ts  message-types.test.ts  sensitivity-resolver.test.ts
(+28 files in other folders)
